<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:background="@color/colorPink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/doiTen"
            android:textColor="@color/colorRed"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/the"
                    android:textSize="20dp" />

                <EditText
                    android:singleLine="true"
                    android:paddingLeft="15dp"
                    android:id="@+id/edtNhapTenThe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintNhapTenTheMoi"
                    android:maxLines="1"
                    android:maxLength="30" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnXacNhan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_custom_dialog_thembang_background"
                    android:text="@string/xacNhan"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnHuy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_custom_dialog_thembang_background"
                    android:text="@string/huy"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>