<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPink"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/themCV"
            android:textColor="@color/colorRed"
            android:textSize="25dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/CV"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edtNhapCV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="@string/nhapCV"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:singleLine="true" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPhongNen"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/phongNen"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="190dp"
                        app:cardCornerRadius="5dp">

                        <Button
                            android:id="@+id/btnColorPicker"
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorBlue" />
                    </android.support.v7.widget.CardView>

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@drawable/icon_right_24" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnXacNhan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_custom_dialog_thembang_background"
                    android:text="@string/xacNhan"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnHuy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_custom_dialog_thembang_background"
                    android:text="@string/huy"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>