<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTenThe"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorLightGray2"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingTop="8dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:text="test"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btnXoaBang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/popXoaBang"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorLightGray" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btnDiChuyenDanhSach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableRight="@drawable/icon_more_than_18"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/popDiChuyenDS"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:background="@color/colorLightGray" />

            <Button
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btnDiChuyenThe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:drawableRight="@drawable/icon_more_than_18"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/popDiChuyenAllTheDS"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue2"
                android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="272dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/square"
        android:rotation="45"></ImageView>

</RelativeLayout>