<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <EditText
                android:background="@null"
                android:id="@+id/edtTenBang"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="Tên bảng"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgConfirm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                android:src="@drawable/icon_checkmark_24" />

            <TextView
                android:id="@+id/tvSTTBang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="1"
                android:textSize="20dp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imgMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right"
                android:src="@drawable/icon_down_24" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:dividerHeight="5dp"
            android:scrollbars="none">

        </android.support.v7.widget.RecyclerView>

        <EditText
            android:id="@+id/edtCardName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/colorWhite"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/huy"
                android:textColor="@color/colorBlue"
                android:textSize="15dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvThemThe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/themThe"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvThem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/them"
                android:textColor="@color/colorBlue"
                android:textSize="15dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>