<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Card_Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            app:collapsedTitleTextAppearance="@style/collapsedTitleTextAppearance"
            app:contentScrim="@color/colorAccent"
            app:expandedTitleGravity="center_vertical"
            app:expandedTitleTextAppearance="@style/expandedTitleTextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="left|bottom"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:paddingLeft="21dp"
                    android:text="@string/trongDanhSach"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvBoardName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="Title_description"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtDescription"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:hint="@string/hintMoTaThe"
                    android:padding="10dp"
                    android:textColor="@color/colorGray"
                    android:textSize="17dp" />

                <ImageView
                    android:id="@+id/imgSaveDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_checkmark_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDateTime"
                    android:layout_width="380dp"
                    android:layout_height="45dp"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/icon_watch_gray_24"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/hintHetHan"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGray"
                    android:textSize="17dp" />

                <CheckBox
                    android:id="@+id/cbDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/checkbox_layout"
                    android:button="@null" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/icon_tag_gray_24" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleColorTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleListWorks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:visibility="visible"></android.support.v7.widget.RecyclerView>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnAddWork"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorWhite"
                android:drawableLeft="@drawable/icon_checked_checkbox_gray_24"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/hintDanhSachCV"
                android:textAllCaps="false"
                android:textColor="@color/colorGray"
                android:textSize="17dp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>